--- a/app/frontend/public/index.html
+++ b/app/frontend/public/index.html
@@ -7,14 +7,14 @@
     <meta name="theme-color" content="#4f46e5" />
     <meta
       name="description"
-      content="VelociRAPTOR Question Paper Generator - Generate intelligent question papers with AI-powered RAG capabilities"
+      content="RAPTOR-Q - Generate intelligent question papers with AI-powered RAG capabilities"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <title>VelociRAPTOR Question Generator</title>
+    <title>RAPTOR-Q</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
